--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -385,6 +385,9 @@
         After it is done, you will need to log in again, on all your other devices. Do you wish to continue?</string>
     <string name="show_conversation_history">Show Conversation History</string>
     <string name="show_conversation_history_summary">Notifications will display previous messages in the conversation</string>
+    <string name="emoji_style">Emoji Style</string>
+    <string name="emoji_style_default">System Default</string>
+    <string name="emoji_style_android_o">Android O</string>
 
 
     <!-- MMS Configuration Settings -->
