different manufactures could use different emojis, so lets only hide that emoji pref if the user is on a 'google' device and android o

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -387,7 +387,7 @@
     <string name="show_conversation_history_summary">Notifications will display previous messages in the conversation</string>
     <string name="emoji_style">Emoji Style</string>
     <string name="emoji_style_default">System Default</string>
-    <string name="emoji_style_android_o">Android O</string>
+    <string name="emoji_style_android_o">Google\'s Android O</string>
 
 
     <!-- MMS Configuration Settings -->
