--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -325,7 +325,7 @@
     <string name="rounder_bubbles">Round Message Bubbles</string>
     <string name="apply_theme_globally">Apply to all Conversations</string>
     <string name="apply_theme_globally_summary">Remove the per-conversation themes, in favor
-        of this global color set.</string>
+        of this global color set</string>
     <string name="swipe_delete">Swipe to Delete</string>
     <string name="blacklist_hint">Type number to blacklist…</string>
     <string name="add_blacklist">%1$s\n\nAre you sure you want to add this blacklist? Messages will
